[tool.poetry]
name = "dataflow-backend"
version = "0.0.1"
description = "The experimental backend for IMK-IFU dataflow."
authors = ["Christian Werner <christian.werner@kit.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
click = "^7.1.2"
numpy = "^1.21.3"
pandas = "^1.3.4"
psycopg2-binary = "^2.9.1"
python-dateutil = "^2.8.1"
python-dotenv = "^0.14.0"
pytz = "^2020.1"
PyYAML = "^5.3.1"
dash = "^2.0.0"
dash-bootstrap-components = "^1.0.0"
ipykernel = "^6.5.0"
selenium = "^3.141.0"
SQLAlchemy = "^1.4.26"
sqlmodel = "^0.0.4"
typer = "^0.4.0"
great-expectations = "^0.13.43"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^21.11b1" # 20.8b1"
bandit = "^1.6.2"
autoflake = "^1.4"
isort = "^5.5.2"
selenium = "^3.141.0"
pytest = "^6.2.1"
percy = "^2.0.2"
beautifulsoup4 = "^4.9.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
